updating page filters

--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
@@ -2,10 +2,13 @@
   display: flex;
 }
 
-.dropdownLi {
+.dropdownDiv {
   :global {
     .ant-select {
-      width: 7rem;
+      width: 15rem;
+    }
+    .ant-select-selection {
+      display: block;
     }
   }
 }
