Updating styling for filters (#153)
* updating

* updating page filters

* udpating

--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderFilters/userDashboardPageHeaderFilters.module.less
@@ -1,11 +1,15 @@
 .divContainer {
   display: flex;
+  margin: 1rem 0;
 }
 
-.dropdownLi {
+.dropdownDiv {
   :global {
     .ant-select {
-      width: 7rem;
+      width: 15rem;
+    }
+    .ant-select-selection {
+      display: block;
     }
   }
 }
