--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -31,6 +31,7 @@
 // ----- MODALS ----- //
 
 @caretSize: 0.625rem;
+@toastWidth: 24.5rem;
 
 // ----- NAVIGATION ----- //
 
@@ -62,6 +63,7 @@
   headerMarginTop: @headerMarginTop;
   navWidth: @navWidth;
   stackCardSize: @stackCardSize;
+  toastWidth: @toastWidth;
 }
 /* stylelint-enable */
 
