--- a/src/spa/shared/forms/form/form.module.less
+++ b/src/spa/shared/forms/form/form.module.less
@@ -10,7 +10,7 @@
 }
 
 .login {
-  padding: 1.25rem @formHorizontalPadding !important;
+  padding: 0 @formHorizontalPadding 1.25rem @formHorizontalPadding !important;
   width: 20rem;
 }
 
