updating blue colors

--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -23,9 +23,9 @@
 
 // ----- COLORS ----- //
 
-@lightBlue: #1FBCFF;
-@blue: #00A6ED;
-@darkBlue: #008FCC;
+@lightBlue: #42B9F5;
+@blue: #14A8F3;
+@darkBlue: #1297DA;
 
 @lightRed: #EE2F5F;
 @red: #E41245;
@@ -40,11 +40,11 @@
 
 // ----- TRANSPARENT COLORS ----- //
 
-@blueThreeQuarterOpacity: #00A6EDBF; // 75% opacity
+@blueThreeQuarterOpacity: #14A8F3BF; // 75% opacity
 @yellowHalfOpacity: #FCC90080; // 50% opacity
 
 // 20% opacities are used for ant design box shadows (e.g. text input box shadows)
-@blueTwentyPercentOpacity: #00A6ED33;
+@blueTwentyPercentOpacity: #14A8F333;
 @redTwentyPercentOpacity: #E4124533;
 
 // ----- EXPORTED COLORS ----- //
