updating to checkbox

--- a/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
+++ b/src/spa/shared/buttons/cardMenuButton/cardMenuButtonContent/cardMenuButtonContent.module.less
@@ -1,9 +1,9 @@
 @import "~styles/_colors";
 
-.iconDiv {
+.contentDiv {
   display: flex;
   justify-content: center;
-  margin-right: 0.5rem;
+  margin-right: 0.125rem;
   width: 1.75rem;
   > svg {
     margin-right: 0;
