renaming color from light grey to dark grey

--- a/src/spa/shared/typography/typography.module.less
+++ b/src/spa/shared/typography/typography.module.less
@@ -25,8 +25,8 @@
   }
 }
 
-.lightGrey {
-  color: @lightGrey;
+.darkGrey {
+  color: @darkGrey;
   > p > a {
     color: @orange;
   }
@@ -63,7 +63,7 @@
 // ----- DISABLED ----- //
 
 .disabled {
-  color: @lightGrey !important;
+  color: @darkGrey !important;
   cursor: not-allowed !important;
   pointer-events: none;
 }
