--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -5,8 +5,8 @@
 @darkBlack: #161925;
 @gitBackground: #F8F8F8;
 @gitBorder: #DfE2E5;
-@lightGrey: #A4AAAF;
 @grey: #D7D8D4;
+@darkGrey: #A4AAAF;
 @navBorder: #E6E8E9;
 @white: #FFF;
 @antBorderColor: #D9D9D9;
@@ -54,7 +54,7 @@
   black: @black;
   blue: @blue;
   green: @green;
-  lightGrey: @lightGrey;
+  darkGrey: @darkGrey;
   orange: @orange;
   purple: @purple;
   red: @red;
