--- a/src/spa/app/layout/navigation/navigationButtons/navigationButton/navigationButton.module.less
+++ b/src/spa/app/layout/navigation/navigationButtons/navigationButton/navigationButton.module.less
@@ -29,7 +29,7 @@
   > svg {
     pointer-events: none;
     * {
-      stroke: @lightGrey;
+      stroke: @darkGrey;
       transition: 0.5s stroke ease;
     }
   }
