--- a/src/spa/components/molecules/phantomCard/phantomCard.module.less
+++ b/src/spa/components/molecules/phantomCard/phantomCard.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  height: @userCardContentHeight;
-  position: absolute;
+  margin: @userCardMargin;
+  min-width: @userCardWidth;
   width: @userCardWidth;
 }
