--- a/src/styles/_sizes.less
+++ b/src/styles/_sizes.less
@@ -11,7 +11,9 @@
 @userCardDescriptionHeight: 6.5rem;
 @userCardInnerMargin: 0.75rem;
 @userCardMargin: 1rem;
-@userCardTotalHeight: calc(@userCardContentHeight + @userCardDescriptionHeight + @userCardMargin * 2);
+@userCardTotalHeight: calc(
+  @userCardContentHeight + @userCardDescriptionHeight + @userCardMargin * 2
+);
 @userCardWidth: 15rem;
 @stackCardMargin: 3rem;
 @stackCardSize: 7rem;
