--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,13 @@
+@import "spa/components/neutrons/styles/_ant";
+@import "spa/components/neutrons/styles/_boxes";
+@import "spa/components/neutrons/styles/_colors";
+@import "spa/components/neutrons/styles/_fonts";
+@import "spa/components/neutrons/styles/_hr";
+@import "spa/components/neutrons/styles/_shadows";
+@import "spa/components/neutrons/styles/_sizes";
+@import "spa/components/neutrons/styles/_transitions";
+@import "spa/components/neutrons/styles/_zIndices";
+
 html, body {
   height: 100%;
   margin: 0;
