--- a/src/index.less
+++ b/src/index.less
@@ -15,7 +15,7 @@ html, body {
 }
 
 #app {
-  background: #F3F5FA; // aka `@appBackground` in `styles/_colors.less`
+  background: @appBackground;
   display: flex;
   height: 100%;
 }
