--- a/src/spa/components/molecules/emptyCard/emptyCard.module.less
+++ b/src/spa/components/molecules/emptyCard/emptyCard.module.less
@@ -26,6 +26,15 @@
   }
 }
 
+.emptyDiv {
+  :global {
+    .ant-empty {
+      display: flex;
+      justify-content: center;
+    }
+  }
+}
+
 .iconDiv {
   margin-left: 1.75rem;
 }
