--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -2,11 +2,11 @@
 
 @appBackground: #F3F5FA;
 @black: #565E5F;
-@darkBlack: #161925;
+@darkBlack: #444B4C;
 @gitBackground: #F8F8F8;
 @gitBorder: #DfE2E5;
 @grey: #D7D8D4;
-@darkGrey: #A4AAAF;
+@darkGrey: #ACACA9;
 @navBorder: #E6E8E9;
 @white: #FFF;
 @antBorderColor: #D9D9D9;
