--- a/src/spa/components/molecules/forms/signupForm/signupForm.module.less
+++ b/src/spa/components/molecules/forms/signupForm/signupForm.module.less
@@ -1,6 +1,16 @@
 @import "~styles/_sizes";
 @import '~styles/_transitions';
 
+.buttonDiv {
+  display: flex;
+  justify-content: end;
+  button {
+    height: 2.25rem;
+    justify-content: center;
+    width: 7.5rem;
+  }
+}
+
 .invalidUsernameDiv {
   :global {
     .ant-form-item {
