--- a/src/index.less
+++ b/src/index.less
@@ -1,13 +1,9 @@
+//@import "./_styles.less";
+
 .container {
+  background: @pink;
   display: flex;
+  height: 10rem;
   margin: 3rem;
+  width: 10rem;
 }
-
-.button {
-  background: #00A6ED;
-  color: #FFF;
-  height: 3rem;
-  margin: 1rem;
-  width: 6rem;
-}
-
