--- a/src/spa/components/organisms/loginCard/loginCard.module.less
+++ b/src/spa/components/organisms/loginCard/loginCard.module.less
@@ -7,6 +7,7 @@
   border-radius: 0.25rem;
   box-shadow: @landingFormBoxShadow;
   left: 5rem;
+  padding: 1rem;
   position: absolute;
   top: 5rem;
 }
