commenting out old typography

--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -1,169 +1,16 @@
-@import "~styles/_colors";
 @import "~styles/_fonts";
-@import "~styles/_sizes";
 
-// ----- OVERALL STYLING ----- //
-
-.typography {
-  display: flex;
-  margin: 0;
-}
-
-// ----- COLORS ----- //
-
-.black {
-  color: @black;
-  > p > a {
-    color: @orange;
-  }
-}
-
-.blue {
-  color: @blue;
-  > p > a {
-    color: @orange;
-  }
-}
-
-.darkGrey {
-  color: @darkGrey;
-  > p > a {
-    color: @orange;
-  }
-}
-
-.orange {
-  color: @orange;
-  > p > a {
-    color: @blue;
-  }
-}
-
-.red {
-  color: @red;
-  > p > a {
-    color: @blue;
-  }
-}
-
-.transparentWhite {
-  color: @transparentWhiteThreeQuarterOpacity;
-  > p > a {
-    color: @white;
-  }
-}
-
-.white {
-  color: @white;
-  > p > a {
-    color: @white;
-  }
-}
-
-// ----- DISABLED ----- //
-
-.disabled {
-  color: @darkGrey !important;
-  cursor: not-allowed !important;
-  pointer-events: none;
-}
-
-// ----- FONTS ----- //
-
-.poppins {
+.h1 {
   font-family: @poppins;
+  font-size: 3rem;
 }
 
-.roboto {
-  font-family: @roboto;
+.h2 {
+  font-family: @poppins;
+  font-size: 2rem;
 }
 
-// ----- SIZES ----- //
-
-.one {
-  font-size: @typographyOne;
-}
-
-.two {
-  font-size: @typographyTwo;
-}
-
-.three {
-  font-size: @typographyThree;
-}
-
-.four {
-  font-size: @typographyFour;
-}
-
-.five {
-  font-size: @typographyFive;
-}
-
-.normal {
-  font-size: @typographyNormal;
-}
-
-// ----- TEXT ALIGN ----- //
-
-.center {
-  text-align: center;
-}
-
-.justify {
-  text-align: justify;
-}
-
-.left {
-  text-align: left;
-}
-
-.right {
-  text-align: right;
-}
-
-// ----- WEIGHTS ----- //
-
-.bold {
-  font-weight: 400;
-}
-
-.light {
-  font-weight: 100;
-}
-
-.regular {
-  font-weight: 300;
-}
-
-// ----- BUTTON & LINK ----- //
-
-.buttonAndLinkMixin {
-  align-items: center;
-  color: @blue;
-  display: flex;
-  text-decoration: none;
-  &:hover {
-    color: @lightBlue;
-  }
-  svg {
-    margin-right: 0.375rem;
-  }
-}
-
-.button {
-  .buttonAndLinkMixin;
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  padding: 0;
-}
-
-.link {
-  .buttonAndLinkMixin;
-}
-
-.whiteButtonLink {
-  color: @white;
+.h3 {
+  font-family: @poppins;
+  font-size: 1rem;
 }
