updating typography story

--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -1,16 +1,29 @@
+@import "~styles/_colors";
 @import "~styles/_fonts";
 
 .h1 {
+  color: @black;
   font-family: @poppins;
   font-size: 3rem;
+  font-weight: bold;
+  letter-spacing: 0.0625rem;
+  margin: 1rem 0;
 }
 
 .h2 {
+  color: @black;
   font-family: @poppins;
-  font-size: 2rem;
+  font-size: 2.25rem;
+  font-weight: bold;
+  letter-spacing: 0.046875rem;
+  margin: 1rem 0;
 }
 
 .h3 {
+  color: @black;
   font-family: @poppins;
-  font-size: 1rem;
+  font-size: 2.25rem;
+  font-weight: lighter;
+  letter-spacing: 0.046875rem;
+  margin: 1rem 0;
 }
