--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -2,50 +2,20 @@
 
 @appBackground: #F3F5FA;
 @black: #565E5F;
-@darkBlack: #444B4C;
-@gitBackground: #F8F8F8;
-@gitBorder: #DfE2E5;
 @grey: #D7D8D4;
-@darkGrey: #ACACA9;
-@navBorder: #E6E8E9;
 @white: #FFF;
-@antBorderColor: #D9D9D9;
-
-// ----- TRANSPARENT GREYSCALE ----- //
-
-@transparentBlackQuarterOpacity: #565E5F40; // 25% opacity
-@transparentBlack: #565E5fA6; // 65% opacity
-@transparentBlackThreeQuarterOpacity: #565E5FBF; // 75% opacity
-@transparentBlackDarker: #565E5fD9; // 85% opacity
-@transparentBlackDarkest: #565E5FE6; // 90% opacity
-@transparentWhiteHalfOpacity: #FFFFFF80; // 25% opacity
-@transparentWhiteThreeQuarterOpacity: #FFFFFFBF; // 75% opacity
 
 // ----- COLORS ----- //
 
-@lightBlue: #42B9F5;
+@lightBlue: #89D3F8;
 @blue: #14A8F3;
-@darkBlue: #1297DA;
+@darkBlue: #0B92D5;
 
-@lightRed: #EE2F5F;
+@pink: #EF3E6B;
 @red: #E41245;
-@darkRed: #BD0F3B;
-
-@brown: #E19470;
-@green: #7DCC93;
-@navy: #21354B;
-@orange: #F17D00;
-@purple: #31355A;
-@yellow: #FCC900;
-
-// ----- TRANSPARENT COLORS ----- //
-
-@blueThreeQuarterOpacity: #14A8F3BF; // 75% opacity
-@yellowHalfOpacity: #FCC90080; // 50% opacity
-
-// 20% opacities are used for ant design box shadows (e.g. text input box shadows)
-@blueTwentyPercentOpacity: #14A8F333;
-@redTwentyPercentOpacity: #E4124533;
+@yellow: #FCB331;
+@green: #00C49A;
+@purple: #522F91;
 
 // ----- EXPORTED COLORS ----- //
 
@@ -54,12 +24,8 @@
   black: @black;
   blue: @blue;
   green: @green;
-  darkGrey: @darkGrey;
-  orange: @orange;
   purple: @purple;
   red: @red;
-  transparentBlack: @transparentBlack;
-  transparentWhite: @transparentWhiteThreeQuarterOpacity;
   white: @white;
   yellow: @yellow;
 }
