--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -1,13 +1,13 @@
 // ----- GREYSCALE ----- //
 
 @appBackground: #F3F5FA;
-@black: #565E5F;
-@grey: #D7D8D4;
+@black: #444444;
+@grey: #B8B8B8;
 @white: #FFF;
 
 // ----- COLORS ----- //
 
-@lightBlue: #89D3F8;
+@lightBlue: #3DB8F5;
 @blue: #14A8F3;
 @darkBlue: #0B92D5;
 
