--- a/src/spa/components/atoms/buttons/button/button.module.less
+++ b/src/spa/components/atoms/buttons/button/button.module.less
@@ -2,10 +2,15 @@
 @import "~styles/_fonts";
 
 .commonButtonMixin {
+  align-items: center;
   border: none;
   cursor: pointer;
+  display: flex;
   font-family: @poppins;
   outline: none;
+  > svg {
+    margin-left: 0.5rem;
+  }
 }
 
 // ----- SIZE ----- //
@@ -15,6 +20,13 @@
   font-size: 1.125rem;
   height: 2.25rem;
   padding: 0 1.125rem;
+}
+
+.large {
+  border-radius: 1.75rem;
+  height: 3.75rem;
+  font-size: 1.5rem;
+  padding: 0 1.5rem;
 }
 
 // ----- TYPE ----- //
