--- a/src/spa/components/atoms/buttons/button/button.module.less
+++ b/src/spa/components/atoms/buttons/button/button.module.less
@@ -53,3 +53,14 @@
     color: @lightBlue;
   }
 }
+
+.text {
+  .commonButtonMixin;
+  background: transparent;
+  border-radius: 0;
+  border: none;
+  color: @black;
+  font-size: 1.5rem;
+  height: auto;
+  padding: 0;
+}
