--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -1,9 +1,14 @@
 // ----- GREYSCALE ----- //
 
 @appBackground: #F3F5FA;
+
 @black: #444444;
+
 @grey: #B8B8B8;
 @lightGrey: #E0E0E0;
+@disabledGrey: #565E5F40;
+@disabledInputGrey: #565E5F1A;
+
 @white: #FFF;
 
 // ----- COLORS ----- //
