--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -3,27 +3,48 @@
 
 .h1 {
   color: @black;
-  font-family: @poppins;
+  font-family: @prompt;
   font-size: 3rem;
-  font-weight: bold;
-  letter-spacing: 0.0625rem;
+  font-weight: 500;
   margin: 1rem 0;
 }
 
 .h2 {
   color: @black;
-  font-family: @poppins;
+  font-family: @prompt;
   font-size: 2.25rem;
-  font-weight: bold;
-  letter-spacing: 0.046875rem;
+  font-weight: 500;
   margin: 1rem 0;
 }
 
 .h3 {
   color: @black;
-  font-family: @poppins;
+  font-family: @prompt;
   font-size: 2.25rem;
-  font-weight: lighter;
-  letter-spacing: 0.046875rem;
+  font-weight: 300;
+  margin: 1rem 0;
+}
+
+.h4 {
+  color: @black;
+  font-family: @prompt;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 1rem 0;
+}
+
+.h5 {
+  color: @black;
+  font-family: @prompt;
+  font-size: 1rem;
+  font-weight: 300;
+  margin: 1rem 0;
+}
+
+.h6 {
+  color: @black;
+  font-family: @prompt;
+  font-size: 0.875rem;
+  font-weight: 500;
   margin: 1rem 0;
 }
