--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -48,3 +48,12 @@
   font-weight: 500;
   margin: 1rem 0;
 }
+
+.bodyLarge {
+  color: @black;
+  font-family: @prompt;
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 175%;
+  margin: 1rem 0;
+}
