--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -57,3 +57,20 @@
   line-height: 175%;
   margin: 1rem 0;
 }
+
+.bodyDefault {
+  color: @black;
+  font-family: @prompt;
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 150%;
+  margin: 1rem 0;
+}
+
+.bodySmall {
+  color: @black;
+  font-family: @prompt;
+  font-size: 0.625rem;
+  font-weight: 300;
+  margin: 1rem 0;
+}
