--- a/src/spa/components/atoms/inputs/checkbox/checkbox.module.less
+++ b/src/spa/components/atoms/inputs/checkbox/checkbox.module.less
@@ -1,14 +1,18 @@
 @import "~styles/_colors";
 @import "~styles/_shadows";
 
-.styledCheckbox {
+.divContainer {
+  display: inline-flex;
+  cursor: pointer;
+  outline: none;
+}
+
+.checkbox {
   align-items: center;
   border-radius: 0.25rem;
-  cursor: pointer;
   display: flex;
   height: 1rem;
   justify-content: center;
-  outline: none;
   width: 1rem;
   transition: all 0.2s;
 }
