--- a/src/spa/components/atoms/inputs/checkbox/checkbox.module.less
+++ b/src/spa/components/atoms/inputs/checkbox/checkbox.module.less
@@ -1,11 +1,6 @@
 @import "~styles/_colors";
+@import "~styles/_fonts";
 @import "~styles/_shadows";
-
-.divContainer {
-  display: inline-flex;
-  cursor: pointer;
-  outline: none;
-}
 
 .checkbox {
   align-items: center;
@@ -15,6 +10,27 @@
   justify-content: center;
   width: 1rem;
   transition: all 0.2s;
+}
+
+.divContainer {
+  align-items: center;
+  display: inline-flex;
+  outline: none;
+}
+
+.disabledDivContainer {
+  cursor: not-allowed;
+}
+
+.enabledDivContainer {
+  cursor: pointer;
+}
+
+.p {
+  font-family: @prompt;
+  font-weight: 300;
+  font-size: 1rem;
+  margin: 0 0 0 0.75rem;
 }
 
 .svg {
@@ -52,7 +68,6 @@
 .disabled-checked {
   background: @disabledGrey;
   border: 0.125rem solid transparent;
-  cursor: not-allowed;
   &:hover {
     background: @disabledGrey;
   }
@@ -60,5 +75,4 @@
 
 .disabled-unchecked {
   background: @disabledInputGrey;
-  cursor: not-allowed;
 }
