--- a/src/spa/components/neutrons/animations/popOverAnimation.module.less
+++ b/src/spa/components/neutrons/animations/popOverAnimation.module.less
@@ -5,7 +5,7 @@
 
 .div {
   border-radius: @standardBorderRadius;
-  box-shadow: @cardBoxShadow;
+  box-shadow: @popOverShadow;
   display: flex;
   position: absolute;
   z-index: @zPopOver;
