--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -1,13 +1,16 @@
-// ----- GREYSCALE ----- //
+// ----- MISCELLANEOUS ----- //
 
 @appBackground: #F3F5FA;
+@disabledGrey: #565E5F40;
+@disabledInputGrey: #565E5F1A;
+@shadowGrey: #6161611A;
+
+// ----- GREYSCALE ----- //
 
 @black: #444444;
 
 @grey: #B8B8B8;
 @lightGrey: #E0E0E0;
-@disabledGrey: #565E5F40;
-@disabledInputGrey: #565E5F1A;
 
 @white: #FFF;
 
