--- a/src/styles/_shadows.less
+++ b/src/styles/_shadows.less
@@ -1,3 +1,5 @@
 @import "~styles/_colors";
 
 @buttonClickShadow: 0 0 0.25rem 0 @lightBlue;
+
+@popOverShadow: 0 16px 32px 2px @shadowGrey, 0 8px 16px 2px @shadowGrey;
