--- a/src/spa/components/atoms/popOver/popOverStorybook/popOverStory.module.less
+++ b/src/spa/components/atoms/popOver/popOverStorybook/popOverStory.module.less
@@ -1,6 +1,6 @@
 @import "~styles/_colors";
 
-.div {
+.boxDiv {
   align-items: center;
   background: @blue;
   border-radius: 0.5rem;
@@ -9,4 +9,14 @@
   height: 5rem;
   justify-content: center;
   width: 5rem;
+}
+
+.boxDivContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.typographyDiv {
+  padding: 0 1rem;
+  width: 20rem;
 }
