--- a/src/spa/components/atoms/inputs/textInput/textInput.module.less
+++ b/src/spa/components/atoms/inputs/textInput/textInput.module.less
@@ -11,6 +11,7 @@
   background: @white;
   border-radius: 0.5rem;
   border: none;
+  color: @black;
   font-family: @prompt;
   font-size: 1.125rem;
   font-weight: 300;
