--- a/src/spa/components/atoms/inputs/dropdown/dropdown.module.less
+++ b/src/spa/components/atoms/inputs/dropdown/dropdown.module.less
@@ -1,19 +1,15 @@
-.dropdown {
-  :global {
-    .ant-select-selection {
-      justify-content: flex-start;
-    }
-    .ant-select-arrow {
-      position: absolute;
-      right: 0;
-      top: 0.25rem;
-    }
-  }
-}
+@import "~styles/_colors";
+@import "~styles/_fonts";
 
-.iconDiv {
-  align-items: center;
-  display: flex;
-  height: 100%;
-  margin-right: 0.375rem;
+.dropdown {
+  background: @white;
+  border: none;
+  color: @black;
+  font-family: @prompt;
+  font-size: 1.125rem;
+  font-weight: 300;
+  height: 2.25rem;
+  letter-spacing: 0.03125rem;
+  outline: none;
+  padding: 0 1rem;
 }
