--- a/src/spa/components/atoms/popOver/popOverStorybook/popOverStory.module.less
+++ b/src/spa/components/atoms/popOver/popOverStorybook/popOverStory.module.less
@@ -16,6 +16,17 @@
   justify-content: center;
 }
 
+.parentBoxContainer {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.popOverContainer {
+  display: flex;
+}
+
 .typographyDiv {
   padding: 0 1rem;
   width: 20rem;
