updating pop confirm

--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -3,7 +3,6 @@
 
 .typographyMixin {
   font-family: @prompt;
-  margin: 1rem 0;
 }
 
 // ----- COLOR ----- //
@@ -14,6 +13,16 @@
 
 .white {
   color: @white;
+}
+
+// ----- MARGIN ----- //
+
+.hasMargin {
+  margin: 1rem 0;
+}
+
+.noMargin {
+  margin: 0;
 }
 
 // ----- SIZE ----- //
