--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -82,3 +82,15 @@
   font-size: 0.625rem;
   font-weight: 300;
 }
+
+.linkDefault {
+  .typographyMixin;
+  color: @blue;
+  font-size: 1rem;
+  font-weight: 300;
+  text-decoration: none;
+  transition: color 0.5s;
+  &:hover {
+    color: @lightBlue;
+  }
+}
