--- a/src/spa/components/molecules/modals/popCheckboxSearchMenu/popCheckboxSearchMenu.module.less
+++ b/src/spa/components/molecules/modals/popCheckboxSearchMenu/popCheckboxSearchMenu.module.less
@@ -1,3 +1,5 @@
+@marginLeft: 0.5rem;
+
 .checkboxDiv {
   &:not(:last-child) {
     margin-bottom: 0.75rem;
@@ -8,4 +10,18 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+}
+
+.footerDivContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-left: @marginLeft;
+}
+
+.optionsContainer {
+  margin-left: @marginLeft;
+}
+
+.typographyDiv {
+  margin-left: @marginLeft;
 }
