--- a/src/spa/components/atoms/hr/hr.module.less
+++ b/src/spa/components/atoms/hr/hr.module.less
@@ -1,7 +1,10 @@
 @import "~styles/_colors";
 
 .hr {
-  border: 0.0625rem solid @lightGrey;
+  background: @lightGrey;
+  border: 0 none;
+  color: @lightGrey;
+  height: 0.0625rem;
   margin: 0.75rem 0;
   width: 100%;
 }
