--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -3,6 +3,7 @@
 @appBackground: #F3F5FA;
 @disabledGrey: #565E5F40;
 @disabledInputGrey: #565E5F1A;
+@placeholderGrey: #D5D7D7;
 @shadowGrey: #6161611A;
 
 // ----- GREYSCALE ----- //
@@ -33,9 +34,9 @@
   black: @black;
   blue: @blue;
   green: @green;
-  purple: @purple;
   red: @red;
+
+  placeholderGrey: @placeholderGrey;
   white: @white;
-  yellow: @yellow;
 }
 /* stylelint-enable */
