--- a/src/spa/components/atoms/inputs/textInput/textInput.module.less
+++ b/src/spa/components/atoms/inputs/textInput/textInput.module.less
@@ -7,6 +7,16 @@
   cursor: not-allowed;
 }
 
+.inputWithIconContainer {
+  align-items: center;
+  background: @white;
+  border-radius: 0.5rem;
+  display: inline-flex;
+  > svg {
+    margin-left: 1.125rem;
+  }
+}
+
 .textInput {
   background: @white;
   border-radius: 0.5rem;
@@ -20,7 +30,7 @@
   outline: none;
   padding: 0 1rem;
   &::placeholder {
-    color: @disabledGrey;
+    color: @placeholderGrey;
   }
 }
 
