--- a/src/spa/components/molecules/modals/popCheckboxSearchMenu/popCheckboxSearchMenu.module.less
+++ b/src/spa/components/molecules/modals/popCheckboxSearchMenu/popCheckboxSearchMenu.module.less
@@ -22,6 +22,10 @@
   margin: 0.5rem 0 0.5rem @marginLeft;
 }
 
+.searchInputDiv {
+  margin-left: -0.5rem;
+}
+
 .typographyDiv {
   margin-left: @marginLeft;
 }
