--- a/src/spa/components/atoms/tag/tag.module.less
+++ b/src/spa/components/atoms/tag/tag.module.less
@@ -1,10 +1,19 @@
 @import "~styles/_colors";
+@import "~styles/_fonts";
 
 .divContainer {
+  align-items: center;
   border-radius: 0.375rem;
   display: inline-flex;
-  height: 1.5rem;
+  height: 1rem;
   padding: 0 0.625rem;
+}
+
+.p {
+  color: @white;
+  font-size: 0.75rem;
+  font-weight: 500;
+  font-family: @prompt;
 }
 
 // ----- COLORS ----- //
