--- a/src/spa/components/atoms/tag/tag.module.less
+++ b/src/spa/components/atoms/tag/tag.module.less
@@ -9,6 +9,16 @@
   padding: 0 0.625rem;
 }
 
+.dot {
+  background: @white;
+  border-radius: 50%;
+  height: 0.25rem;
+  width: 0.25rem;
+  &:not(:last-child) {
+    margin-right: 0.125rem;
+  }
+}
+
 .p {
   color: @white;
   font-size: 0.75rem;
