--- a/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
+++ b/src/spa/app/layout/header/pageHeaders/userDashboardPageHeader/userDashboardPageHeaderForm/userDashboardPageHeaderForm.module.less
@@ -7,7 +7,7 @@
 .formContainer {
   display: flex;
   flex-direction: column;
-  margin-left: @pageMarginLeft;
+  //margin-left: @pageMarginLeft;
 }
 
 .mainContainer {
