--- a/src/spa/components/molecules/copy/aboutStack/aboutStack.module.less
+++ b/src/spa/components/molecules/copy/aboutStack/aboutStack.module.less
@@ -9,7 +9,7 @@
 .stackSection {
   margin-left: @aboutPageMargin;
   margin-top: 5rem;
-  padding-right: @pageMarginLeft;
+  //padding-right: @pageMarginLeft;
 }
 
 .stackTitleDiv {
