--- a/src/spa/components/molecules/userCardMolecules/userCardContent/userCardContent.module.less
+++ b/src/spa/components/molecules/userCardMolecules/userCardContent/userCardContent.module.less
@@ -1,8 +1,8 @@
 @import "~styles/_sizes";
 
 .container {
-  height: @userCardContentHeight;
-  width: @userCardWidth;
+  //height: @userCardContentHeight;
+  //width: @userCardWidth;
   display: flex;
   justify-content: center;
   position: relative;
