--- a/src/spa/components/old/userCard/userCardTemplate/userCardTemplate.module.less
+++ b/src/spa/components/old/userCard/userCardTemplate/userCardTemplate.module.less
@@ -8,13 +8,13 @@
   box-shadow: @cardBoxShadow;
   display: flex;
   flex-direction: column;
-  height: @userCardTotalHeight;
-  margin: @userCardMargin;
-  min-width: @userCardWidth;
+  //height: @userCardTotalHeight;
+  //margin: @userCardMargin;
+  //min-width: @userCardWidth;
   overflow: hidden;
   position: relative;
   transition: box-shadow 0.1s ease;
-  width: @userCardWidth;
+  //width: @userCardWidth;
 }
 
 .containerPreview {
