--- a/src/spa/components/old/userCard/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
+++ b/src/spa/components/old/userCard/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
@@ -3,7 +3,7 @@
 .channelDiv {
   align-items: center;
   display: flex;
-  margin-bottom: @userCardInnerMargin;
+  //margin-bottom: @userCardInnerMargin;
 }
 
 .channelIcon {
