--- a/src/spa/landing/layout/header/header.module.less
+++ b/src/spa/landing/layout/header/header.module.less
@@ -1,5 +1,5 @@
 @import "~styles/_sizes";
 
 .div {
-  margin: 3rem 0 3rem calc(@aboutPageMargin - @pageMarginLeft);
+  //margin: 3rem 0 3rem calc(@aboutPageMargin - @pageMarginLeft);
 }
