--- a/src/spa/app/pages/userSettingsPage/userSettingsPage.module.less
+++ b/src/spa/app/pages/userSettingsPage/userSettingsPage.module.less
@@ -4,6 +4,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin: 5rem 0 0 @pageMarginLeft;
+  //margin: 5rem 0 0 @pageMarginLeft;
   width: 100%;
 }
