--- a/src/spa/components/molecules/phantomCard/phantomCard.module.less
+++ b/src/spa/components/molecules/phantomCard/phantomCard.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  margin: @userCardMargin;
-  min-width: @userCardWidth;
-  width: @userCardWidth;
+  //margin: @userCardMargin;
+  //min-width: @userCardWidth;
+  //width: @userCardWidth;
 }
