--- a/src/spa/components/neutrons/animations/youtubeCardThumbnailAnimation.module.less
+++ b/src/spa/components/neutrons/animations/youtubeCardThumbnailAnimation.module.less
@@ -2,7 +2,7 @@
 @import "~styles/_sizes";
 
 .div {
-  height: @userCardContentHeight;
+  //height: @userCardContentHeight;
   position: absolute;
-  width: @userCardWidth;
+  //width: @userCardWidth;
 }
