--- a/src/spa/components/organisms/userCard/userCardDescription/userCardDescriptionTags/userCardDescriptionTags.module.less
+++ b/src/spa/components/organisms/userCard/userCardDescription/userCardDescriptionTags/userCardDescriptionTags.module.less
@@ -1,3 +1,12 @@
+.ellipsis {
+  cursor: pointer;
+}
+
+.ellipsisContentContainer {
+  margin: 0.5rem;
+  width: 9rem;
+}
+
 .tag {
   &:not(:last-child) {
     margin-right: 0.25rem;
