Adding tags to card (#192)
* updating

* updating

* updating

* updating

* updating

* updating

* updating

* updating

* updating

* updating

* updating

* updating

--- a/src/spa/components/atoms/tag/tag.module.less
+++ b/src/spa/components/atoms/tag/tag.module.less
@@ -1,10 +1,29 @@
 @import "~styles/_colors";
+@import "~styles/_fonts";
 
 .divContainer {
+  align-items: center;
   border-radius: 0.375rem;
   display: inline-flex;
-  height: 1.5rem;
+  height: 1rem;
   padding: 0 0.625rem;
+}
+
+.dot {
+  background: @white;
+  border-radius: 50%;
+  height: 0.25rem;
+  width: 0.25rem;
+  &:not(:last-child) {
+    margin-right: 0.125rem;
+  }
+}
+
+.p {
+  color: @white;
+  font-size: 0.75rem;
+  font-weight: 500;
+  font-family: @prompt;
 }
 
 // ----- COLORS ----- //
