--- a/src/spa/components/atoms/typography/typography.module.less
+++ b/src/spa/components/atoms/typography/typography.module.less
@@ -61,6 +61,7 @@
   .typographyMixin;
   font-size: 0.875rem;
   font-weight: 500;
+  line-height: 120%;
 }
 
 .bodyLarge {
@@ -79,7 +80,7 @@
 
 .bodySmall {
   .typographyMixin;
-  font-size: 0.625rem;
+  font-size: 0.75rem;
   font-weight: 300;
 }
 
