--- a/src/spa/components/organisms/userCard/userCardDescription/userCardDescription.module.less
+++ b/src/spa/components/organisms/userCard/userCardDescription/userCardDescription.module.less
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: column;
   height: @userCardDescriptionHeight;
-  justify-content: space-between;
   margin: @userCardDescriptionMargin;
+}
+
+.subTitle {
+  margin: 0.5rem 0 0.75rem 0;
 }
