--- a/src/spa/components/organisms/userCard/userCardDescription/userCardDescriptionTags/userCardDescriptionTags.module.less
+++ b/src/spa/components/organisms/userCard/userCardDescription/userCardDescriptionTags/userCardDescriptionTags.module.less
@@ -7,6 +7,14 @@
   width: 9rem;
 }
 
+.hasTags {
+  margin-bottom: 0.5rem;
+}
+
+.noTags {
+  margin-bottom: 1.5rem;
+}
+
 .tag {
   &:not(:last-child) {
     margin-right: 0.25rem;
@@ -15,5 +23,4 @@
 
 .tagsContainer {
   display: flex;
-  margin-bottom: 0.5rem;
 }
