--- a/src/spa/components/atoms/buttons/button/button.module.less
+++ b/src/spa/components/atoms/buttons/button/button.module.less
@@ -62,8 +62,7 @@
   background: transparent;
   border-radius: 0;
   border: none;
-  color: @black;
-  font-size: 1.5rem;
+  color: @blue;
   height: auto;
   padding: 0;
 }
