--- a/src/spa/components/organisms/userCard/userCard.module.less
+++ b/src/spa/components/organisms/userCard/userCard.module.less
@@ -2,6 +2,12 @@
 @import "~styles/_shadows";
 @import "~styles/_sizes";
 
+.contentContainer {
+  height: @userCardContentHeight;
+  overflow: hidden;
+  width: 100%;
+}
+
 .userCardContainer {
   background: @white;
   border-radius: 1.5rem;
