--- a/src/styles/_colors.less
+++ b/src/styles/_colors.less
@@ -5,6 +5,7 @@
 @disabledInputGrey: #565E5F1A;
 @placeholderGrey: #D5D7D7;
 @shadowGrey: #6161611A;
+@navBorder: #6161611A;
 
 // ----- GREYSCALE ----- //
 
@@ -26,6 +27,8 @@
 @yellow: #FCB331;
 @green: #00C49A;
 @purple: #522F91;
+
+@yellowHalfOpacity: rgba(252, 179, 49, 0.5);
 
 // ----- EXPORTED COLORS ----- //
 
